tdf#65872 [WIP] Allow prefered interpretation of pasted numbers to be saved

Change-Id: I065f1f8cff1b3c7d7198ce431df39a7b8cb7b593