sc/inc/scabstdlg.hxx
@@ -393,6 +393,7 @@ protected:
 public:
     virtual LanguageType GetLanguageType() const = 0;
     virtual bool IsDateConversionSet() const = 0;
+    virtual bool IsKeepAskingSet() const = 0;
 };
 
 class ScAbstractDialogFactory
