sc/source/ui/attrdlg/scdlgfact.cxx
@@ -876,6 +876,11 @@ bool AbstractScTextImportOptionsDlg_Impl::IsDateConversionSet() const
     return m_xDlg->isDateConversionSet();
 }
 
+bool AbstractScTextImportOptionsDlg_Impl::IsKeepAskingSet() const
+{
+    return m_xDlg->isKeepAskingSet();
+}
+
 BitmapEx AbstractScTextImportOptionsDlg_Impl::createScreenshot() const
 {
     VclPtr<VirtualDevice> xDialogSurface(m_xDlg->getDialog()->screenshot());
